--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,8 @@
     <string name="fcm_message">fcm_message</string>
     <string name="passwordHintnew">كلمة المرور الجديدة</string>
     <string name="confirmPasswordnew">تأكيد كلمة المرور الجديدة</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_medicine">"لا يوجد اي ادوية "</string>
 </resources>
