--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
 
     <string name="home_second">Home Second</string>
 
-    <string name="no_to_dos">لا يوجد لديك اي تنبيهات </string>
+    <string name="no_to_dos">لا يوجد لديك اي تنبيهات مضافة للتمارين </string>
 
-    <string name="title">عنوان التذكير </string>
+    <string name="title">عنوان التمرين  </string>
 
     <string name="remind_me">ذكرني</string>
 
@@ -136,7 +136,7 @@
     <string name="add_medicine">اضافة دواء</string>
     <string name="Medicine_list">"قائمة الادوية "</string>
 
- <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="app_Description">"يعتمد التطبيق على الفكرة الأساسية التي مفادها أن برنامجًا صحيًا فعالًا لمرضى السكر وضغط الدم لا يعلم المرض فحسب، بل أيضًا من خلال منحهم دورًا نشطًا للتحكم في طريقة الحياة. يهدف إلى السيطرة على مرض السكري وضغط الدم للحد من مضاعفاته في المجتمع.يركز البرنامج على:
  1-مواعيد الدواء وتنبيهات اسم الدواء.
 2 -تنبيهات التعيين بزيارة الطبيب كل شهر.
@@ -154,5 +154,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="no_medicine">"لا يوجد اي ادوية "</string>
+    <string name="no_medicine">"لا يوجد اي ادوية مضافة للتنبيه "</string>
+    <string name="Pracctice">التمارين</string>
 </resources>
